--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run lint && npm run format && next dev --turbopack",
-    "build": "npm run lint && npm run format && next build --turbopack",
-    "start": "npx serve@latest out",
+    "dev": "next dev",
+    "build": "next build",
+    "build:gh-pages": "cross-env USE_BASE_PATH=true next build",
+    "start": "next start",
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "preview": "npx serve@latest out"
   },
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.90.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.545.0",
     "next": "15.5.2",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -21,12 +31,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.13",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
